Commiting automatically updated files
